--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Puzzle Locker</title>
     <style>
         :root {
-            --primary: #00ff41;
+            --primary: #8a42f5;
             --danger: #ff3333;
             --bg: #0d0d0d;
             --panel: #141414;
@@ -593,5 +593,6 @@
     </script>
 
 </body>
+
 
 </html>
