--- a/puzzles.html
+++ b/puzzles.html
@@ -300,7 +300,7 @@
     function initSig() {
         document.getElementById('g-signal').classList.add('active');
         document.getElementById('title').innerText = "THE SIGNAL";
-        document.getElementById('desc').innerText = "Match Green wave to Red.";
+        document.getElementById('desc').innerText = "Match Blue wave to Red.";
         wTarg = { f:Math.random()*0.1+0.02, a:Math.random()*40+20, p:Math.random()*6 };
         drawSig();
     }
@@ -363,3 +363,4 @@
 
 </body>
 </html>
+
